k8s-manifests/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tms-app
  namespace: tms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tms
  template:
    metadata:
      labels:
        app: tms
    spec:
      containers:
      - name: tms
        image: vaibhavpatil45/tms-nginx:1.0
        imagePullPolicy: Always
        ports:
          - containerPort: 80
