k8s-manifests/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: tms
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
