k8s-manifests/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tms-ingress
  namespace: tms
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tms-service
                port:
                  number: 80
